@@ -1,3 +1,7 @@
 .wy-side-nav-search {
     background-color: rgb(64, 80, 96);
 }
+
+.wy-side-nav-search input[type="text"] {
+    border-color: transparent;
+}
